Update portfolio home

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html lang="en-us">
     <head>
+      <link rel="stylesheet" href="styles/reset.css">
       <link rel="stylesheet" href="styles/style.css">
       <meta charset="UTF-8">
       <title>Rochelle Rebucas</title>
@@ -21,8 +22,8 @@
 
 
         <div class="hero-content">
-          <h1>Rochelle<br> Liana<br> Rebucas</h1>
-          <h2>Designer based in Los Angeles</h2>
+          <h1><span>Rochelle</span><br><span>Liana</span><br><span>Rebucas</span></h1>
+          <h2 class="change-text"></h2>
         </div>
 
         <div class="work">
@@ -57,7 +58,7 @@
           <div class="button">
             <h1> let's make something great. </h1>
             <img src="images/icons/miscellaneus.svg">
-            <h2> Contact </h2>
+            <a href="">Contact</a>
           </div>
 
           <div class="skills">
@@ -124,7 +125,7 @@
           <div class="button">
             <h1> want to know more? </h1>
             <img src="images/icons/miscellaneus.svg">
-            <h2> About </h2>
+            <a href="">About </a>
           </div>
 
         </div>
@@ -144,7 +145,7 @@
           <img src="images/logo_smile.svg">
         </div>
         <div class="footer-text">
-          <p> design + development <br> by Rochelle Rebucas </p>
+          <p> Design + Development by Rochelle Rebucas </p>
         </div>
         <div class="footer-contact">
           <img src="images/chat.svg">
