--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <html lang="en-us">
     <head>
       <link rel="stylesheet" href="styles/reset.css">
+      <link rel="stylesheet" href="styles/animate.css">
       <link rel="stylesheet" href="styles/style.css">
+
       <meta charset="UTF-8">
       <title>Rochelle Rebucas</title>
     </head>
@@ -13,7 +15,7 @@
           <nav>
             <ul>
               <li><a href="" class="hilight">work</a></li>
-              <li><a href="">about</a></li>
+              <li><a href="file:///Users/rochellerebucas/Desktop/Bloc/portfolio/about.html">about</a></li>
               <li><a href="">contact</a></li>
             </ul>
           </nav>
@@ -46,18 +48,12 @@
 
           <div class="second-row">
 
-            <div class="project">
-              COMING SOON
-            </div>
 
-            <div class="project">
-              COMING SOON
-            </div>
           </div>
 
           <div class="button">
             <h1> let's make something great. </h1>
-            <img src="images/icons/miscellaneus.svg">
+            <img class="spin" src="images/icons/miscellaneus.svg">
             <a href="">Contact</a>
           </div>
 
@@ -124,15 +120,17 @@
 
           <div class="button">
             <h1> want to know more? </h1>
-            <img src="images/icons/miscellaneus.svg">
+            <img class="spin" src="images/icons/miscellaneus.svg">
             <a href="">About </a>
           </div>
 
         </div>
 
         <div class="thanks">
+          <div class="swing">
           <img src="images/open-sign2.svg">
           <p> thanks for <br> stopping by! </p>
+        </div>
         </div>
 
       </div>
@@ -142,7 +140,8 @@
 
       <footer>
         <div class="footer-logo">
-          <img src="images/logo_smile.svg">
+          <img id="footerImg" src="images/face1.png" onmouseover="onHover();"
+      onmouseout="offHover();">
         </div>
         <div class="footer-text">
           <p> Design + Development by Rochelle Rebucas </p>
@@ -152,6 +151,8 @@
           <a href="">GET IN TOUCH</a>
         </div>
       </footer>
+      <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+      <script src="javascript/home.js"></script>
     </body>
 
   </html>
