contact button mailto update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
               <li><a href="" class="hilight">work</a></li>
               <li><a href="file:///Users/rochellerebucas/Desktop/Bloc/portfolio/about.html">about</a></li>
-              <li><a href="">contact</a></li>
+              <li><a href="mailto:rochelle.rebucas@gmail.com">contact</a></li>
             </ul>
           </nav>
         </header>
@@ -54,7 +54,7 @@
           <div class="button">
             <h1> let's make something great. </h1>
             <img class="spin" src="images/icons/miscellaneus.svg">
-            <a href="">Contact</a>
+            <a href="mailto:rochelle.rebucas@gmail.com">Contact</a>
           </div>
 
           <div class="skills">
@@ -148,7 +148,7 @@
         </div>
         <div class="footer-contact">
           <img src="images/chat.svg">
-          <a href="">GET IN TOUCH</a>
+          <a href="mailto:rochelle.rebucas@gmail.com">GET IN TOUCH</a>
         </div>
       </footer>
       <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
