--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <ul>
               <li><a href="file:///Users/rochellerebucas/Desktop/Bloc/portfolio/index.html">work</a></li>
               <li><a href="" class="hilight">about</a></li>
-              <li><a href="">contact</a></li>
+              <li><a href="mailto:rochelle.rebucas@gmail.com">contact</a></li>
             </ul>
           </nav>
         </header>
@@ -32,16 +32,14 @@
           <div class="text-container">
             <h1>Hi, I'm Rochelle.</h1>
             <h3>I design intuitive solutions to make life simpler.</h3>
-            <p>	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod tempor molestie. Donec nibh lectus, rhon ultrices urna vel, aliquet sollicitudin ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod tempor molestie. Donec nibh lectus, rhon ultrices urna vel, aliquet sollicitudin ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod tempor molestie. Donec nibh lectus, rhon ultrices urna vel, aliquet sollicitudin ex.
-              <br>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod tempor molestie. Donec nibh lectus, rhon ultrices urna vel, aliquet sollicitudin ex.</p>
+            <p>;kjsfbaskldjbfasdklf</p>
         </div>
         </div>
 
         <div class="facts first-row">
           <div class="fact-group">
             <img src="images/icons/cap.svg">
-            <h3>Education</h3>
+            <h3 class="hilight">Education</h3>
             <ul>
               <li><b>2017-Present</b> - Bloc Design Program <br><em>User Experience Design Apprenticeship</em></li>
               <li><b>2015-2017</b> - UC Los Angeles <br><em>B.A. Linguistics & Computer Science</em></li>
@@ -51,7 +49,7 @@
           </div>
           <div class="fact-group">
             <img src="images/icons/support.svg">
-            <h3>Work</h3>
+            <h3 class="hilight">Work</h3>
             <ul>
               <li><b>2015-2019</b> - UCode Learning Center <br><em>Coding Instructor</em></li>
               <li><b>2017-2019</b> - Lennox School District <br><em>Coding Instructor</em></li>
@@ -62,7 +60,7 @@
           </div>
           <div class="fact-group">
             <img src="images/icons/suitcase.svg">
-            <h3>Toolset</h3>
+            <h3 class="hilight">Toolset</h3>
             <ul>
               <li>HTML / CSS / Javascript</li>
               <li>Adobe Photoshop</li>
@@ -79,13 +77,12 @@
           <div class="fact-group">
             <h3>Fun Facts!</h3>
             <ul>
-              <li>Growing up, I was a professional jumper. I was a ballerina for over 10 years...</li>
-              <li>Throughout high school I played volleyball and did long, triple, and high jump on the track team.</li>
+              <li>Growing up, I was a professional jumper. I started as a ballerina for over 10 years...</li>
+              <li>Then in HS I played volleyball and did long, triple, and high jump on the track team.</li>
               <li>I love learning new languages. I can speak basic Japanese and am currently learning Spanish!</li>
               <li>My best friends would describe me highly as "the girl who always burns toast."</li>
-              <li></li>
               <li>My favorite food is peanut butter, but sadly I'm allergic to peanuts.</li>
-              <li>When I'm not designing, I am most likely at a </li>
+              <li>When I am not designing, I am most likely trying a new workout class or laughing at memes on the interweb.</li>
             </ul>
           </div>
 
@@ -100,7 +97,7 @@
           <div class="button">
             <h1> find out what i'm up to </h1>
             <img class="spin" src="images/icons/miscellaneus.svg">
-            <a href="">Contact</a>
+            <a href="mailto:rochelle.rebucas@gmail.com">Contact</a>
           </div>
 
 
@@ -121,7 +118,7 @@
         </div>
         <div class="footer-contact">
           <img src="images/chat.svg">
-          <a href="">GET IN TOUCH</a>
+          <a href="mailto:rochelle.rebucas@gmail.com">GET IN TOUCH</a>
         </div>
       </footer>
       <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
