--- a/about.html
+++ b/about.html
@@ -16,7 +16,13 @@
             <ul>
               <li><a href="file:///Users/rochellerebucas/Desktop/Bloc/portfolio/index.html">work</a></li>
               <li><a href="" class="hilight">about</a></li>
-              <li><a href="mailto:rochelle.rebucas@gmail.com">contact</a></li>
+              <li><a>contact</a>
+                <ul class="dropdown">
+                  <li><a href="mailto:rochelle.rebucas@gmail.com">Email</a></li>
+                  <li><a href="#">LinkedIn</a></li>
+                  <li><a href="#">Dribbble</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </header>
@@ -78,7 +84,7 @@
             <h3>Fun Facts!</h3>
             <ul>
               <li>Growing up, I was a professional jumper. I started as a ballerina for over 10 years...</li>
-              <li>Then in HS I played volleyball and did long, triple, and high jump on the track team.</li>
+              <li>Then throughout HS I played volleyball and did long, triple, and high jump on the track team.</li>
               <li>I love learning new languages. I can speak basic Japanese and am currently learning Spanish!</li>
               <li>My best friends would describe me highly as "the girl who always burns toast."</li>
               <li>My favorite food is peanut butter, but sadly I'm allergic to peanuts.</li>
@@ -97,7 +103,7 @@
           <div class="button">
             <h1> find out what i'm up to </h1>
             <img class="spin" src="images/icons/miscellaneus.svg">
-            <a href="mailto:rochelle.rebucas@gmail.com">Contact</a>
+            <a href="mailto:rochelle.rebucas@gmail.com">Send a message</a>
           </div>
 
 
