--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
             <ul>
               <li><a href="" class="hilight">work</a></li>
               <li><a href="file:///Users/rochellerebucas/Desktop/Bloc/portfolio/about.html">about</a></li>
-              <li><a href="mailto:rochelle.rebucas@gmail.com">contact</a></li>
+              <li><a>contact</a>
+                <ul class="dropdown">
+                  <li><a href="mailto:rochelle.rebucas@gmail.com">Email</a></li>
+                  <li><a href="#">LinkedIn</a></li>
+                  <li><a href="#">Dribbble</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </header>
