portfolio updatecravery.css

--- a/about.html
+++ b/about.html
@@ -38,7 +38,10 @@
           <div class="text-container">
             <h1>Hi, I'm Rochelle.</h1>
             <h3>I design intuitive solutions to make life simpler.</h3>
-            <p>;kjsfbaskldjbfasdklf</p>
+            <p>I embarked on my UX journey in 2017, immediately after finishing my senior year of college at UCLA. However, my passion for design did not start there. Growing up, I was a true creative at heart—competing in art competitions, teaching myself new crafting skills, and designing school merchandise and banners. During college, I discovered the vast amount of opportunities in the ever-evolving world of technology. As a computer science major, I started teaching web design to kids as a part-time job. I figured that the realm of tech was a viable path for me, but I wanted to be able to fuel my love of visual art at the same time. When choosing my career path, I sought to merge the two seemingly incompatible passions of mine and happily landed in the world of user experience. <br><br>
+
+As a designer, I follow a simple equation: beautiful interface + splendid experience. I believe that technology should act as a catalyst for a fulfilling life, and that’s exactly what I strive to help you achieve. So, feel free to take a peek at what I’ve been working on, and do let me know how we can work together. Thanks for visiting!
+</p>
         </div>
         </div>
 
@@ -84,11 +87,11 @@
             <h3>Fun Facts!</h3>
             <ul>
               <li>Growing up, I was a professional jumper. I started as a ballerina for over 10 years...</li>
-              <li>Then throughout HS I played volleyball and did long, triple, and high jump on the track team.</li>
+              <li>Then throughout HS I played volleyball and did long, triple, and high jump on the track team</li>
               <li>I love learning new languages. I can speak basic Japanese and am currently learning Spanish!</li>
-              <li>My best friends would describe me highly as "the girl who always burns toast."</li>
-              <li>My favorite food is peanut butter, but sadly I'm allergic to peanuts.</li>
-              <li>When I am not designing, I am most likely trying a new workout class or laughing at memes on the interweb.</li>
+              <li>My best friends would describe me highly as "the girl who always burns toast"</li>
+              <li>I am passionate about everything art, beauty, and wellness</li>
+              <li>When I am not designing, I am most likely trying a new workout class or laughing at memes on the interweb</li>
             </ul>
           </div>
 
